--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Mi portfolio</title>
     <link rel="shortcut icon" href="/clase-3/img/alvaro.png">
     <link rel="stylesheet" href="styles/style.css">
+    <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -49,6 +51,12 @@
 
 
     <footer>
+        <div class="social-buttons">
+            <a href="https://www.linkedin.com/in/alvaro-sopena-figueroa/" class="fa fa-linkedin" target="_blank"></a>
+            <a href="https://instagram.com/alvarosopena" class="fa fa-instagram" target="_blank"></a>
+            <a href="https://mailto:alvarosopenaf@gmail.com" class="fa fa-envelope" target="_blank"></a>
+            <a href=" https://wa.me/+5492614668479" class="fa fa-whatsapp" target="_blank"></a>
+        </div>
         <p>Made with love @ Alvaro Sopeña Figueroa</p>
     </footer>
 </body>
