arreglado css, un poco de responsive, se agrega el archivo de wireframe en pdf

--- a/index.html
+++ b/index.html
@@ -27,24 +27,31 @@
             </nav>
         </div>
     </header>
+
     <main>
-        <div class="main-top">
-            <div class="text-top">
-                <h1>Alvaro Sopeña Figueroa </h1>
-                <h2>Web Developer - HTML | CSS | JavaScript & React</h2>
+        <div class="container">
+            <div class="main-top">
+                <div class="text-top">
+                    <h1>Alvaro Sopeña Figueroa </h1>
+                    <h2>Web Developer - HTML | CSS | JavaScript & React</h2>
+                </div>
+                <div class="hero">
+                    <img src="img/alvaro.png" id=imghero class=imghero alt="foto Alvaro">
+                </div>
             </div>
-            <div class="hero">
-                <img src="img/alvaro.png" id=imghero class=imghero alt="foto Alvaro">
-            </div>
-        </div>
-        <div class="info">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, officiis. Eum omnis repudiandae maxime
-                corporis quisquam tenetur saepe ipsam. Aliquam, omnis beatae. Reiciendis, officiis. Doloremque eos porro
-                voluptate dolores provident?</p>
-            <div class="linea"></div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, officiis. Eum omnis repudiandae maxime
-                corporis quisquam tenetur saepe ipsam. Aliquam, omnis beatae. Reiciendis, officiis. Doloremque eos porro
-                voluptate dolores provident?</p>
+            <span class="info">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, officiis. Eum omnis repudiandae
+                    maxime
+                    corporis quisquam tenetur saepe ipsam. Aliquam, omnis beatae. Reiciendis, officiis. Doloremque eos
+                    porro
+                    voluptate dolores provident?</p>
+                <span class="linea"></span>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, officiis. Eum omnis repudiandae
+                    maxime
+                    corporis quisquam tenetur saepe ipsam. Aliquam, omnis beatae. Reiciendis, officiis. Doloremque eos
+                    porro
+                    voluptate dolores provident?</p>
+            </span>
         </div>
     </main>
 
