--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- HEADER -->
     <header>
         <div class="top-nav">
-            <a href="" class="logo">@alvarosopena</a>
+            <a href="index.html" class="logo">@alvarosopena</a>
             <nav>
                 <ul>
                     <li><a href="index.html">| Home |</a></li>
